# anysat

./: .gitignore  demo.ipynb  hubconf.py  pyproject.toml
anysat/: eval.py  train.py
anysat/data/: BraDD.py  BurnScar.py  FLAIR.py  MultiDataset.py  Pastis.py  Planted.py  S2Naip.py  Sen1floods11.py  Sickle.py  So2Sat.py  SpaceNet7.py  TimeSen2Crop.py  TreeSAT.py  __init__.py  biomassters.py  datamodule.py  utils.py
anysat/data/transforms/: transform.py
anysat/models/: __init__.py  losses.py  module.py  module_JEPA.py
anysat/models/metrics/: metrics.py
anysat/models/networks/: Fine_tuning.py  Fine_tuning_FLAIR.py  JEPAAny.py  MonoModal.py  mlp.py
anysat/models/networks/encoder/: Any.py  Any_multi.py  Transformer.py
anysat/models/networks/encoder/utils/: irpe.py  patch_embeddings.py  pos_embed.py  utils.py  utils_ViT.py
anysat/utils/: __init__.py  instantiators.py  logging_utils.py  mask_collator.py  rich_utils.py  utils.py
